--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "antd": "^5.24.3",
     "date-fns": "^4.1.0",
     "next": "^14.2.24",
     "react": "^18",
