--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.0.3",
     "antd": "^5.24.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "next": "^14.2.24",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
@@ -23,6 +24,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
+    "react-sticky-box": "^2.0.5",
     "sass": "^1.77.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.3",
