--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^1.0.6",
     "antd": "^5.24.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "gsap": "^3.12.7",
     "next": "^14.2.24",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
