--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^1.0.6",
+    "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.0.2",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
