--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "axios-retry": "^4.5.0",
+    "bwip-js": "^4.6.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "gsap": "^3.12.7",
@@ -31,11 +32,13 @@
     "next": "^14.2.24",
     "razorpay": "^2.9.6",
     "react": "^18",
+    "react-barcode": "^1.6.1",
     "react-bootstrap": "^2.10.2",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-modal-video": "^2.0.2",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-qr-code": "^2.0.16",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-sticky-box": "^2.0.5",
