--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-ui-popup-state": "^5.3.5",
     "moment": "^2.30.1",
     "next": "^14.2.24",
+    "pdf417-generator": "^1.0.5",
     "razorpay": "^2.9.6",
     "react": "^18",
     "react-barcode": "^1.6.1",
