--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
