--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dayjs": "^1.11.13",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "material-ui-popup-state": "^5.3.5",
     "moment": "^2.30.1",
